Full Project Add

--- a/index.html
+++ b/index.html
@@ -41,16 +41,50 @@
         <img src="Project Image/jhankar2.png" alt="Jhankar Mahbub image 2">
     </div>
 
-    <div class="half-width"></div>
+    <div class="half-width">
+        <h2>Big Dream</h2>
+        <h3>Become a Web DEveloper</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia sed dolores nam voluptate blanditiis. Nam dolore sequi ipsum ea iusto tempore repudiandae iste, beatae quia odio quo, maiores vero qui?</p>
+
+        <a class="link" href="http://127.0.0.1:5500/index.html" target="_blank">Download Image</a>
+
+    
+    </div>
 </section>
 
-
-
-
-
-
-
 <!-- Dream Section End Here -->
+
+<!--Experience Section Start Here  -->
+<section class="experience-section">
+    <h1>Experince</h1>
+
+    <div id="full-stack" class="half-width single-ex">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange">2025 ! -Present Pro Level Web Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Totam quas saepe, a atque impedit aspernatur repellat.est .
+        harum libero autem adipisci doloribus, sed quasi.</p>
+    </div>
+
+    <div id="baby-web" class="half-width single-ex">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange">2020-2024 Programming Hero Learner</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Totam quas saepe, a atque impedit aspernatur repellat.est .
+            harum libero autem adipisci doloribus, sed quasi.</p>
+
+    </div>
+</section>
+
+<footer>
+    <p>© 2024 GitHub, Inc.Footer navigation</p>
+</footer>
+
+
+
+
+
+<!--Experience Section End Here  -->
 
 
 
